--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,13 @@ version: 2.1
 jobs:
   build:
     environment:
-      IMAGE_NAME: bryanhuntesl/poc_circleci_buildkit
+      IMAGE_NAME: bryanhuntesl/
     docker:
       - image: circleci/buildpack-deps:stretch
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 18.09.3 
       - run:
           name: Build Docker image
           command: DOCKER_BUILDKIT=1 docker build --progress plain --ssh default=${SSH_AUTH_SOCK} . 
