--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
       - image: circleci/buildpack-deps:stretch
     steps:
       - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "58:25:b9:3b:e2:7c:46:89:60:26:10:9f:d0:e2:b6:ac"
       - setup_remote_docker:
           version: 18.09.3 
       - run:
