--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           version: 18.09.3 
       - run:
           name: Build Docker image
-          command: DOCKER_BUILDKIT=1 docker build --progress plain --ssh default=${SSH_AUTH_SOCK} . 
+          command: GIT_SSH_COMMAND="ssh -vvv" DOCKER_BUILDKIT=1 docker build --progress plain --ssh default=${SSH_AUTH_SOCK} . 
 workflows:
   version: 2
   build-master:
