push generated image to dockerhub

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   build:
     environment:
       IMAGE_NAME: bryanhuntesl/
+      DOCKER_HUB_TOKEN: ${DOCKER_HUB_TOKEN}
+      DOCKER_USER: bryanhuntesl
+
     docker:
       - image: circleci/buildpack-deps:stretch
     steps:
@@ -15,7 +18,10 @@ jobs:
           version: 18.09.3 
       - run:
           name: Build Docker image
-          command: DOCKER_BUILDKIT=1 docker build --progress plain --ssh default=${SSH_AUTH_SOCK} . 
+          command: DOCKER_BUILDKIT=1 docker build --progress plain --ssh default=${SSH_AUTH_SOCK} -t ${DOCKER_USER}/poc_circleci_buildkit_parent .
+      - run: |
+          docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
+          docker push ${DOCKER_USER}/poc_circleci_buildkit_parent
 workflows:
   version: 2
   build-master:
