--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,9 @@ version: 2.1
 jobs:
   build:
     environment:
-      IMAGE_NAME: bryanhuntesl/
+      IMAGE_NAME: poc_circleci_buildkit_parent
       DOCKER_USER: bryanhuntesl
       DOCKER_HUB_TOKEN: ${DOCKER_HUB_TOKEN}
-
-
     docker:
       - image: circleci/buildpack-deps:stretch
     steps:
@@ -23,8 +21,8 @@ jobs:
           name: Build Docker image
           command: DOCKER_BUILDKIT=1 docker build --progress plain --ssh default=${SSH_AUTH_SOCK} -t ${DOCKER_USER}/poc_circleci_buildkit_parent .
       - run: |
-          echo ${DOCKER_HUB_TOKEN} | docker login -u ${DOCKER_USER} --password-stdin
-          docker push ${DOCKER_USER}/poc_circleci_buildkit_parent
+          docker login -u ${DOCKER_USER} -p ${DOCKER_HUB_TOKEN}
+          docker push ${DOCKER_USER}/${IMAGE_NAME}
 workflows:
   version: 2
   build-master:
