--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           # docker_layer_caching: true
       - run:
           name: Build Docker image
-          command: DOCKER_BUILDKIT=1 docker build --progress plain --ssh default=${SSH_AUTH_SOCK} -t ${DOCKER_USER}/poc_circleci_buildkit_parent .
+          command: DOCKER_BUILDKIT=1 docker build --progress plain --ssh default=${SSH_AUTH_SOCK} -t ${DOCKER_USER}/${IMAGE_NAME} .
       - run: |
           docker login -u ${DOCKER_USER} -p ${DOCKER_HUB_TOKEN}
           docker push ${DOCKER_USER}/${IMAGE_NAME}
